Slider : modify popup of slider z-index (fixed DCM-1735)
modify z-index of popup-slider with new variable in jquery.mobile.tizen.less

--- a/src/themes/tizen/common/jquery.mobile.tizen.slider.less
+++ b/src/themes/tizen/common/jquery.mobile.tizen.slider.less
@@ -137,7 +137,7 @@ a.ui-slider-handle {
 
 .ui-slider-popup {
 	position: absolute !important;
-	z-index: @z_base_popup;
+	z-index: @z_base_slider_popup;
 
 	width: @popup-width;
 	height: @popup-height;
